--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>Create Your VERY OWN Todolist!</h1>
-    <a href="/login"> Login</a>
-    <a href="/signup"> Signup</a>
+    <div class="container">
+        <div class="card">
+            <h1>Create Your VERY OWN Todolist!</h1>
+            <a href="/login"> Login</a>
+            <a href="/signup"> Signup</a>
+        </div>
+    </div> 
 </body>
 </html>
