--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Create Your VERY OWN Todolist!</h1>
-    <a href="/login"> Login</a>
-    <a href="/signup"> Signup</a>
+    <a class="waves-effect waves-light btn indigo lighten-3 grey-text text-darken-4" href="/login"> Login</a>
+    <a class="waves-effect waves-light btn" href="/signup"> Signup</a>
 </body>
 </html>
