--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    <h1>Create Your VERY OWN Todolist!</h1>
-    <a class="waves-effect waves-light btn indigo lighten-3 grey-text text-darken-4" href="/login"> Login</a>
-    <a class="waves-effect waves-light btn" href="/signup"> Signup</a>
+<body class="container center-align grey darken-2">
+  <section class="card-panel grey darken-4">
+    <h1 class="grey-text text-lighten-2">Create Your VERY OWN Todolist!</h1>
+      <a class="waves-effect waves-light btn indigo lighten-3 grey-text text-darken-4" href="/login"> Login</a>
+      <a class="waves-effect waves-light btn blue lighten-3 grey-text text-darken-4" href="/signup"> Signup</a>
+  </section>        
 </body>
 </html>
