--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
 <body class="container center-align grey darken-2">
   <section class="card-panel grey darken-4">
     <h1 class="grey-text text-lighten-2">Create Your VERY OWN Todolist!</h1>
-      <a cclass="waves-effect waves-light btn" href="/login"> Login</a>
+      <a class="waves-effect waves-light btn" href="/login"> Login</a>
       <a class="waves-effect waves-light btn" href="/signup"> Signup</a>
   </section>        
 </body>
