--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -4,23 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <title>Document</title>
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 </head>
-<body>
+<body class="container center-align grey darken-2">
+    <section class="card-panel grey darken-4">
     <% if (locals.messages.errors) { %>
         <% messages.errors.forEach( el => { %>
             <div class="alert alert-danger"><%= el.msg %></div>
         <% }) %>    
     <% } %>
     <form action="/signup" method="POST">
-        <input type="text" name="userName" placeholder="User Name">
-        <input type="email" name="email" placeholder="Email">
-        <input type="password" name="password" placeholder="Password">
-        <input type="password" name="confirmPassword" placeholder="Confirm Password">
-        <input type="submit">
+        <input class="grey-text text-lighten-2" type="text" name="userName" placeholder="User Name">
+        <input class="grey-text text-lighten-2" type="email" name="email" placeholder="Email">
+        <input class="grey-text text-lighten-2" type="password" name="password" placeholder="Password">
+        <input class="grey-text text-lighten-2" type="password" name="confirmPassword" placeholder="Confirm Password">
+        <button class="btn waves-effect waves-light" type="submit" name="action">Signup
+          </button>
     </form>
+    </section>
 </body>
 </html>
