fixed share function and added shared todo section

--- a/views/todos.ejs
+++ b/views/todos.ejs
@@ -13,7 +13,9 @@
     
 </head>
 <body class="container center-align grey darken-2">
+
     <section class="card-panel grey darken-4 grey-text text-lighten-2">
+
         <a class="waves-effect waves-light btn right"href="/logout">Logout</a>
         <h1><%= user.userName %> has <%= left %> things left to do.</h1>
         <ul>
@@ -26,7 +28,21 @@
                 </li>
         <% }) %>    
         </ul>
+        </section>
 
+        <section class="card-panel grey darken-4 grey-text text-lighten-2">
+            <h1><%= user.userName %> has <%= sharedLeft %> shared things left to do.</h1>
+            <ul>
+            <% sharedTodos.forEach( el => {%>
+                    <li class='todoItem' data-id='<%=el._id%>'>
+                        <span class='<%= el.completed === true ? 'completed' : 'not'%>'><%= el.todo %></span>
+                        <a class="waves-effect waves-light share btn"> Share</a>
+                        <span class="hidden"><input type="text" name="share" id="" class="shareInput"> <a class="shareSend btn">Send Todo</a></span>
+                        <a class='waves-effect waves-light del btn'> Delete </a>
+                    </li>
+            <% }) %>    
+            </ul>
+            </section>
 <h1>Add a Todo</h1>
         <form action="/todos/createTodo" method='POST'>
             <input type="text" placeholder="Enter Todo Item" name='todoItem'>
