--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,20 +18,13 @@ span{
     font-size: xx-large
 }
 
-<<<<<<< HEAD
-<<<<<<< HEAD
+
 input {
   color: rgb(255, 255, 255);
-=======
-=======
+}
 
-
-
-
-
->>>>>>> 4f0b0b08562c48c9f1cc464e6acfd03eb9eb1e08
 span.date{
     color: aquamarine;
     font-size:small
->>>>>>> 9a3191cb70ab4ddefc9ba0d489af3eba9c8c455e
+
 }
