--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,8 +11,8 @@
 <body class="container center-align grey darken-2">
   <section class="card-panel grey darken-4">
     <h1 class="grey-text text-lighten-2">Create Your VERY OWN Todolist!</h1>
-      <a class="waves-effect waves-light btn indigo lighten-3 grey-text text-darken-4" href="/login"> Login</a>
-      <a class="waves-effect waves-light btn blue lighten-3 grey-text text-darken-4" href="/signup"> Signup</a>
+      <a class="btn" href="/login"> Login</a>
+      <a class="btn" href="/signup"> Signup</a>
   </section>        
 </body>
 </html>
