--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,11 @@
 </head>
 <body class="container center-align grey darken-2">
   <section class="card-panel grey darken-4">
-    <h1 class="grey-text text-lighten-2">Create Your VERY OWN Todolist!</h1>
+    <h1 class="grey-text text-lighten-2">100Devs To-Do List App</h1>
+    <div class="divider"></div>
+    <h4 class="grey-text text-lighten-2">Create Your VERY OWN Todolist!</h4>
+    <div class="divider"></div>
+      <br>
       <a class="waves-effect waves-light btn" href="/login"> Login</a>
       <a class="waves-effect waves-light btn" href="/signup"> Signup</a>
   </section>        
