--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>100Devs To-Do List</title>
+    <title>100Devs To-Do List | Signup</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
@@ -12,6 +12,7 @@
 </head>
 <body class="container center-align grey darken-2">
     <section class="card-panel grey darken-4">
+    <h1>Signup for a 100Devs Account</h1>
     <% if (locals.messages.errors) { %>
         <% messages.errors.forEach( el => { %>
             <div class="alert alert-danger"><%= el.msg %></div>
@@ -22,9 +23,10 @@
         <input class="grey-text text-lighten-2" type="email" name="email" placeholder="Email">
         <input class="grey-text text-lighten-2" type="password" name="password" placeholder="Password">
         <input class="grey-text text-lighten-2" type="password" name="confirmPassword" placeholder="Confirm Password">
-        <button class="btn waves-effect waves-light" type="submit" name="action">Signup
-          </button>
+        <br>
+        <button class="btn waves-effect waves-light" type="submit" name="action">Signup</button>
     </form>
+    <p class="grey-text text-lighten-2">Already have a 100Devs Account? <a href="/login">Login</a> instead!</p>
     </section>
 </body>
 </html>
