--- a/views/todos.ejs
+++ b/views/todos.ejs
@@ -12,51 +12,66 @@
     
 </head>
 <body class="container center-align grey darken-2">
-
-    <section class="card-panel grey darken-4 grey-text text-lighten-2">
-
-        <a class="waves-effect waves-light btn right"href="/logout">Logout</a>
-        <h1><%= user.userName %> has <%= left %> things left to do.</h1>
-        <ul>
-        <% todos.forEach( el => { %>
-                <li class='todoItem' data-id='<%=el._id%>'>
-                    <span class='<%= el.completed === true ? 'completed' : 'not'%>'><%= el.todo %></span>
-                    <a class="waves-effect waves-light share btn"> Share</a>
-                    <span class="hidden"><input type="text" name="share" id="" class="shareInput"> <a class="shareSend btn">Send Todo</a></span>
-                    <a class='waves-effect waves-light del btn'> Delete </a>
-                    <br>
-                    <span class="date grey-text text-lighten-2">Added: <%= el.dateCreated %> </span>
-                    <br>
-                    <span class="date grey-text text-lighten-2">Completed: <%= el.dateCompleted %> </span>
-                </li>
-        <% }) %>    
-        </ul>
+    <nav class="teal accent-4">
+        <div class="nav-wrapper row">
+            <div class="wrapper col s12">
+                <a href="#" class="header-logo left">100Devs To-Do List</a>
+                <ul id="nav-mobile" class="right">
+                    <li><a class="waves-effect waves-light btn .logout-btn" href="/logout">Logout</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <br>
+    <div class="row">
+        <section class="card-panel grey darken-4 grey-text text-lighten-2 col s12">
+            <h2>Add a Todo</h2>
+            <form action="/todos/createTodo" method='POST'>
+                <input type="text" placeholder="Enter Todo Item" name='todoItem'>
+                <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+                    <i class="material-icons right">send</i>
+                  </button>
+            </form>
+            <br>
         </section>
-<!-- SHARED TODOS-->
-        <section class="card-panel grey darken-4 grey-text text-lighten-2">
-            <h1><%= user.userName %> has <%= sharedLeft %> shared things left to do.</h1>
-            <ul>
-            <% sharedTodos.forEach( el => {%>
-                    <li class='todoItem' data-id='<%=el._id%>'>
-                        <span class='<%= el.completed === true ? 'completed' : 'not'%>'><%= el.todo %></span>
-                        <a class="waves-effect waves-light share btn"> Share</a>
-                        <span class="hidden"><input type="text" name="share" id="" class="shareInput"> <a class="shareSend btn">Send Todo</a></span>
-                        <a class='waves-effect waves-light del btn'> Delete </a>
-                    </li>
-            <% }) %>    
-            </ul>
-            </section>
-<h1>Add a Todo</h1>
-        <form action="/todos/createTodo" method='POST'>
-            <input type="text" placeholder="Enter Todo Item" name='todoItem'>
-            <button class="btn waves-effect waves-light" type="submit" name="action">Submit
-                <i class="material-icons right">send</i>
-              </button>
-        </form>
-
-        
-
-        <script src="js/main.js"></script>
-    </section>
+        <section id="personal-todos" class="card-panel grey darken-4 grey-text text-lighten-2 col s12 m12 l12 xl6">
+            <div class="card-content">
+                <h2>Personal To-Do's</h2>
+                <p><%= user.userName %> has <%= left %> things left to do.</p>
+                <ul>
+                <% todos.forEach( el => { %>
+                        <li class='todoItem' data-id='<%=el._id%>'>
+                            <span class='<%= el.completed === true ? 'completed' : 'not'%>'><%= el.todo %></span>
+                            <a class="waves-effect waves-light share btn"> Share</a>
+                            <span class="hidden"><input type="text" name="share" id="" class="shareInput"> <a class="shareSend btn">Send Todo</a></span>
+                            <a class='waves-effect waves-light del btn'> Delete </a>
+                            <br>
+                            <span class="date grey-text text-lighten-2">Added: <%= el.dateCreated %> </span>
+                            <br>
+                            <span class="date grey-text text-lighten-2">Status: <%= el.dateCompleted == 'Not Completed' ? el.dateCompleted : 'Completed on ' + el.dateCompleted %> </span>
+                        </li>
+                <% }) %>    
+                </ul>
+            </div>
+        </section>
+    <!-- SHARED TODOS-->
+        <section id="shared-todos" class="card-panel grey darken-4 grey-text text-lighten-2 col s12 m12 l12 xl6">
+            <div class="card-content">
+                <h2>Shared To-Do's</h2>
+                <p class=""><%= user.userName %> has <%= sharedLeft %> shared things left to do.</p>
+                <ul>
+                <% sharedTodos.forEach( el => {%>
+                        <li class='todoItem' data-id='<%=el._id%>'>
+                            <span class='<%= el.completed === true ? 'completed' : 'not'%>'><%= el.todo %></span>
+                            <a class="waves-effect waves-light share btn"> Share</a>
+                            <span class="hidden"><input type="text" name="share" id="" class="shareInput"> <a class="shareSend btn">Send Todo</a></span>
+                            <a class='waves-effect waves-light del btn'> Delete </a>
+                        </li>
+                <% }) %>    
+                </ul>
+            </div>
+        </section>
+    </div>
+    <script src="js/main.js"></script>
 </body>
 </html>
