credit buttons added

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,5 +19,7 @@
       <a class="waves-effect waves-light btn" href="/login"> Login</a>
       <a class="waves-effect waves-light btn" href="/signup"> Signup</a>
   </section>        
+  <h4 class="grey-text text-lighten-2"> Created By:</h4>
+  <h3 class="grey-text text-lighten-2"><a class="waves-effect waves-light btn" href="https://github.com/ParkerDuncanDev">Parker</a> <a class="waves-effect waves-light btn" href="https://github.com/nicoleAwd">Nicole</a> <a href="https://github.com/mitch8020">JP</a><a href="https://github.com/goldtoothgirl">gtg</a></h3>
 </body>
 </html>
